--- a/resources/intro-to-postgis-ITA/css/theme/default.css
+++ b/resources/intro-to-postgis-ITA/css/theme/default.css
@@ -29,7 +29,9 @@ content: url(../../images/maptime_roma_logo.png);
 position: fixed;
 bottom: 3.5em;
 left: 3.5em;
-box-shadow: 5px 5px 10px #000; }
+width: 100px;
+height: 100px;
+}
 
 .reveal {
   font-family: "Lato", sans-serif;
