--- a/resources/intro-to-postgis-ITA/css/theme/default.css
+++ b/resources/intro-to-postgis-ITA/css/theme/default.css
@@ -27,10 +27,10 @@ body {
   body:after {
 content: url(../../images/maptime_roma_logo.png);
 position: fixed;
-top: 3.5em;
-left: 3.5em;
-    height: 100px;
-    width: 100px;
+top: 1em;
+bottom: 1em;
+    height: 10em;
+    width: 10em;
 }
 
 .reveal {
