--- a/resources/intro-to-postgis-ITA/css/theme/default.css
+++ b/resources/intro-to-postgis-ITA/css/theme/default.css
@@ -23,14 +23,12 @@ body {
   background: -ms-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background: radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background-color: #2b2b2b; }
-  
+
   body:after {
 content: url(../../images/maptime_roma_logo_small.png);
 position: fixed;
 top: 1em;
-bottom: 1em;
-    height: 10em;
-    width: 10em;
+left: 1em;
 }
 
 .reveal {
